--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
